Fix layout for form input and button to align with design doc

--- a/components/src/paywall/components/form.css
+++ b/components/src/paywall/components/form.css
@@ -19,14 +19,13 @@
 form {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.25rem;
   width: calc(100% - 4px);
   margin: 0 auto;
 }
 
 form label {
   display: block;
-  margin-bottom: 0.25rem;
   font-size: var(--helper-font-size);
   line-height: var(--helper-line-height);
   font-weight: 300;
@@ -38,6 +37,7 @@ form label .required {
 
 form .field-row {
   display: flex;
+  flex-direction: var(--wmt-form-direction, column);
   gap: 0.75rem;
 }
 
